# sdlgl

./: CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt
examples/blank_window/: CMakeLists.txt  main.cpp
examples/blank_window/src/: main.cpp
examples/colored_square/: CMakeLists.txt  main.cpp
examples/imgui_usage/: CMakeLists.txt  main.cpp
examples/imgui_usage/include/imgui/: imconfig.h
examples/imgui_usage/lib/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_opengl3.cpp  imgui_impl_sdl3.cpp  imgui_tables.cpp  imgui_widgets.cpp
include/glad/: glad.h
include/sdlgl/: sdlgl.hpp  utility.hpp
lib/: glad.c
src/: sdlgl.cpp  utility.cpp
